syntax = "proto2";
import "common.proto";
package ucrehelloworld;

service UcreHelloWorld {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  optional string     name    = 1;
}

message SayHelloResponse {
  optional common.Ret ret     = 1;
}
